Primer crud completo de categoría incluyendo imagen, se toma de referencia para los siguientes

--- a/public/css/app copy.css
+++ b/public/css/app copy.css
@@ -727,7 +727,7 @@ select {
   outline: 1px auto -webkit-focus-ring-color;
 }
 
-.container {
+/*.container {
   width: 100%;
 }
 
@@ -735,7 +735,7 @@ select {
   .container {
     max-width: 0px;
   }
-}
+}*/
 
 .sr-only {
   position: absolute;
@@ -48286,7 +48286,7 @@ select {
 }
 
 @media (min-width: 0px) {
-  .xs\:container {
+  /*.xs\:container {
     width: 100%;
   }
 
@@ -48294,7 +48294,7 @@ select {
     .xs\:container {
       max-width: 0px;
     }
-  }
+  }*/
 
   .xs\:sr-only {
     position: absolute;
